<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="rs.gajdar_design.hobbit20.prva">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/waiter"
        android:gravity="right"
        android:textSize="20sp"
        android:id="@+id/imeKonobara"
        android:textStyle="italic" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/narudzbinaButton"
        android:layout_below="@+id/imeKonobara"
        android:layout_marginTop="50dp"

        android:onClick="izaberiSto"
        android:text="@string/order"
        android:textStyle="bold"
        android:textSize="35sp" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/userchange"
        android:id="@+id/korisnikButton"
        android:onClick="noviKorisnik"
        android:layout_below="@+id/narudzbinaButton"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="35sp" />


</RelativeLayout>
